config/envoy/v3.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: upstream
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: upstream-service
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  local policies_headers, policies_body = request_handle:httpCall(
                  "policyapi-service",
                  {
                    [":method"] = "GET",
                    [":path"] = "/v1/policies/",
                    [":authority"] = request_handle:headers():get(":authority"),
                    ["accept"] = "text/rego",
                    ["fiware-service"] = request_handle:headers():get("fiware-service"),
                    ["fiware-servicepath"] = request_handle:headers():get("fiware-servicepath"),
                  },
                  nil,
                  5000,
                  false)
                  request_handle:headers():add("policies", policies_body)
                end
          - name: envoy.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              grpc_service:
                envoy_grpc:
                  cluster_name: ext_authz-opa-service
                timeout: 0.250s
              transport_api_version: V3
              with_request_body:
                max_request_bytes: 8192
                allow_partial_message: true
              failure_mode_allow: false
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                common = (loadfile "/etc/envoy/lua/common.lua")()
                function envoy_on_request(request_handle)
                  common:context_broker_request(request_handle)
                end
                function envoy_on_response(response_handle)
                  common:context_broker_response(response_handle)
                end
          - name: envoy.filters.http.router
            typed_config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8090
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: policyapi
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: policyapi-service
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  request_handle:headers():add("fiware_service", request_handle:headers():get("fiware-Service"))
                  request_handle:headers():add("fiware_service_path", request_handle:headers():get("fiware-Servicepath"))
                end
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  local policies_headers, policies_body = request_handle:httpCall(
                  "policyapi-service",
                  {
                    [":method"] = "GET",
                    [":path"] = "/v1/policies/",
                    [":authority"] = request_handle:headers():get(":authority"),
                    ["accept"] = "text/rego",
                    ["fiware-service"] = request_handle:headers():get("fiware-service"),
                    ["fiware-servicepath"] = request_handle:headers():get("fiware-servicepath"),
                  },
                  nil,
                  5000,
                  false)
                  request_handle:headers():add("policies", policies_body)
                end
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              grpc_service:
                envoy_grpc:
                  cluster_name: ext_authz-opa-service
                timeout: 0.250s
              transport_api_version: V3
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                common = (loadfile "/etc/envoy/lua/common.lua")()
                function envoy_on_request(request_handle)
                  common:management_api_request(request_handle)
                end
                function envoy_on_response(response_handle)
                  common:management_api_response(response_handle)
                end
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: upstream-service
    connect_timeout: 0.250s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream-service
                port_value: 1026

  - name: policyapi-service
    connect_timeout: 0.250s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: policyapi-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: policy-api
                port_value: 8000

  - name: ext_authz-opa-service
    connect_timeout: 0.250s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ext_authz-opa-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ext_authz-opa-service
                port_value: 9002
